--- a/css/media.css
+++ b/css/media.css
@@ -18,11 +18,20 @@
         margin-top: 10px;
     }
 
+    .navbar-expand-lg{
+        padding: 0;
+    }
+
     .hero_content {
         width: 100%;
         margin: auto;
     }
 
+    .modal-body iframe{
+        width: 100%;
+        height: 300px;
+    }
+    
     .dashed-line {
         position: absolute;
         border-left: 2px dashed var(--cs-primary);
@@ -102,6 +111,10 @@
 
     }
 
+    .hero .row {
+        min-height: 767px;
+    }
+
     .hero_content {
         width: 100%;
         margin: auto;
@@ -118,11 +131,11 @@
     .dashed-line {
         height: 70%;
         top: 20px;
-        margin-left: 8%;
+        margin-left: 5%;
     }
 
     .hbox_icon {
-        margin-right: 10px;
+        margin-right: 20px;
     }
 
     .how_box {
@@ -165,7 +178,7 @@
         width: 100%;
     }
 
-    .cat_row .col-md-4{
+    .cat_row .col-md-4 {
         padding: 0;
     }
 
@@ -189,6 +202,10 @@
         padding: 20px;
     }
 
+    .community {
+        padding: 0px 15px 60px 15px;
+    }
+
     .join_us {
         width: 100%;
     }
@@ -202,4 +219,20 @@
         justify-content: center;
         align-items: center;
     }
+}
+
+@media(max-width:425px) {
+    .hero .row {
+        min-height: 767px;
+    }
+
+    .dashed-line {
+        margin-left: 22px;
+    }
+
+    .modal-body iframe{
+        width: 100%;
+        height: 200px;
+    }
+    
 }
