--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     font-family: Quicksand, sans-serif;
 }
 
+body{
+    scroll-behavior: smooth;
+}
+
 h1,
 h2,
 h3,
@@ -31,7 +35,7 @@ p {
 }
 
 .cp-60 {
-    padding: 60px 0px;
+    padding: 80px 0px;
 }
 
 h1 {
@@ -78,15 +82,17 @@ p {
     background-color: var(--cs-hover);
     color: var(--cs-bg);
 }
+/* global ends */
 
+/* header starts */
 .header {
     position: fixed;
     width: 100%;
     z-index: 100;
 }
 
-.navbar-toggler:focus{
-    box-shadow: none!important;
+.navbar-toggler:focus {
+    box-shadow: none !important;
 }
 
 .header.scrolled {
@@ -178,17 +184,21 @@ p {
     border-color: var(--cs-bg);
 }
 
-.modal-body{
-    padding: 0;
-    padding: 10px;
+.modal-body {
+    padding: 5px;
     background-color: var(--cs-hover);
 }
 
+.modal-body iframe {
+    width: 100%;
+    height: 450px;
+}
+/* heder ends ===========================*/
+
+/* how starts ===========================*/
 .how {
     background-color: var(--cs-bg);
 }
-
-.how_text {}
 
 .how_content {
     position: relative;
@@ -229,11 +239,9 @@ p {
     justify-content: center;
     z-index: 0;
 }
+/* how ends  =========================== */
 
-.hbox_ct {}
-
-.campaign {}
-
+/* campaign starts  =========================== */
 .camp_head {
     padding-bottom: 30px;
 }
@@ -242,8 +250,6 @@ p {
     display: flex;
     align-items: center;
 }
-
-.slider_img {}
 
 .slider_img img {
     border-radius: 20px;
@@ -265,6 +271,7 @@ p {
     float: right;
 }
 
+/* campaign carousel */
 .campaign .owl-nav i {
     font-size: 20px;
     padding: 10px;
@@ -279,6 +286,7 @@ p {
     background-color: var(--cs-hover);
 }
 
+/* cta */
 .cta {
     background-color: var(--cs-primary);
     text-align: center;
@@ -328,10 +336,10 @@ p {
 .btn-cs i {
     margin-left: 10px;
 }
+/* campaign ends==========================*/
 
-.categories {}
-
-.catedory_title{
+/* categories starts  ===========================*/
+.catedory_title {
     text-align: center;
 }
 
@@ -364,7 +372,10 @@ p {
     font-weight: 700;
 }
 
-.community {}
+/* community post */
+.community {
+    padding-bottom: 80px;
+}
 
 .community_title {
     padding-bottom: 30px;
@@ -375,7 +386,7 @@ p {
     background-color: var(--cs-bg);
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 4px -1px;
-    margin: 20px 0px;
+    margin: 20px 10px;
 }
 
 .com_post img {
@@ -392,14 +403,10 @@ p {
     transform: scale(1.05);
 }
 
-.com_content {}
-
 .com_content h3 {
     font-weight: 700;
     padding: 15px 0px;
 }
-
-.com_content p {}
 
 .fund {
     display: flex;
@@ -408,7 +415,6 @@ p {
     padding-top: 15px;
 }
 
-.fund_des {}
 
 .fund_des h4 {
     color: var(--cs-hover);
@@ -419,6 +425,7 @@ p {
     color: var(--cs-heading);
 }
 
+/* community_carousel */
 .post_carousel .owl-dots .disabled {
     display: flex;
 }
@@ -448,7 +455,9 @@ p {
     border-radius: 50px;
     background-color: var(--cs-hover);
 }
+/* community ends  =========================== */
 
+/* join us starts  ===========================*/
 .join {
     background-color: var(--cs-primary);
 }
@@ -471,13 +480,14 @@ p {
 .join_us h2 {
     color: var(--cs-bg);
 }
+/* join us ends  ===========================*/
 
+
+/* footer starts  ===========================*/
 .footer {
     background-color: var(--cs-bg);
-    padding: 30px 0px;
+    padding: 40px 0px;
 }
-
-.footer_content {}
 
 .footer_content img {
     width: 150px;
@@ -498,7 +508,14 @@ p {
     margin: 5px;
 }
 
-.social_links li a {}
+.social_links li:hover{
+    background-color: var(--cs-hover);
+    transition: all 0.2s ease-in-out 0s, all 0.2s ease-in-out 0s;
+}
+
+.social_links li a:hover{
+    margin: 0!important;
+}
 
 .social_links li a i {
     font-size: 20px;
@@ -506,18 +523,12 @@ p {
     padding: 10px;
 }
 
-.footer_content {}
-
-.footer_content ul {}
-
 .footer_content ul h4 {
     color: var(--cs-heading);
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 10px;
 }
-
-.footer_content ul li {}
 
 .footer_content ul li a {
     font-size: 16px;
@@ -530,7 +541,7 @@ p {
     margin-left: 10px;
 }
 
-.cc{
+.cc {
     margin-top: 40px;
 }
-/* footer ends */
+/* footer ends  ===========================*/
